plugins {
    id 'java'
}

group = 'camp.nextstep.edu'
version = '1.0-SNAPSHOT'


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'com.github.woowacourse-projects:mission-utils:1.2.0'
}

test {
    useJUnitPlatform()
}
